--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script type="text/javascript">
     $(function() {
         var params = {
-            "api_key": "{subscription key}",
+            "api_key": "29fb2c42b2e54ffe9226628a3010b4f3",
             // Request parameters
         };
       
