--- a/metro-wdc/MetroWDC.html
+++ b/metro-wdc/MetroWDC.html
@@ -9,13 +9,26 @@
     
     <script src="https://connectors.tableau.com/libs/tableauwdc-2.3.latest.js" type="text/javascript"></script>
     <script src="../metro-wdc/MetroWDC.js" type="text/javascript"></script>
+
+    <style>
+#mainbody {
+    padding-top: 20%;
+    max-width: 150px;}
+
+
+
+}
+</style>
 </head>
 
-<body>
+<body id = 'mainbody'>
     <div class="container container-table">
-        <div class="row vertical-center-row">
-            <div class="text-center col-md-4 col-md-offset-4">
+        <div if = 'mainElement' class="row vertical-center-row">
+            <div> <img class="img-responsive center-block" src="https://upload.wikimedia.org/wikipedia/commons/e/e9/WMATA_Metrobus_logo.svg" id = 'mainimg'/>
+
+                <div class="text-center col-md-4 col-md-offset-4">
                 <button type = "button" id = "submitButton" class = "btn btn-success" style = "margin: 10px;">Get WMTA Bus Incidents Data</button>
+                </div>
             </div>
         </div>
     </div>
