--- a/metro-wdc/MetroWDC.html
+++ b/metro-wdc/MetroWDC.html
@@ -27,8 +27,9 @@
             <div> <img class="img-responsive center-block" src="https://upload.wikimedia.org/wikipedia/commons/e/e9/WMATA_Metrobus_logo.svg" id = 'mainimg'/>
 
                 <div class="text-center col-md-4 col-md-offset-4">
-                <button type = "button" id = "submitButton" class = "btn btn-success" style = "margin: 10px;">Get WMTA Bus Incidents Data</button>
-                </div>
+                <button type = "button" id = "submitButton" class = "btn btn-success" style = "margin: 10px;">Get WMTA Bus Incidents Data</button> <br />
+                Metro API Key: <input type="text" id="MetroAPIKey"/>
+                </div >
             </div>
         </div>
     </div>
