--- a/metro-wdc/MetroWDC.html
+++ b/metro-wdc/MetroWDC.html
@@ -23,14 +23,10 @@
 
 <body id = 'mainbody'>
     <div class="container container-table">
-        <div if = 'mainElement' class="row vertical-center-row">
-            <div> <img class="img-responsive center-block" src="https://upload.wikimedia.org/wikipedia/commons/e/e9/WMATA_Metrobus_logo.svg" id = 'mainimg'/>
-
-                <div class="text-center col-md-4 col-md-offset-4">
+        <div if = 'mainElement' class="row vertical-center-row" style="text-align:center" >
+            <img  src="https://upload.wikimedia.org/wikipedia/commons/e/e9/WMATA_Metrobus_logo.svg" id = 'mainimg'/> <br />
                 <button type = "button" id = "submitButton" class = "btn btn-success" style = "margin: 10px;">Get WMTA Bus Incidents Data</button> <br />
-                Metro API Key: <input type="text" id="MetroAPIKey"/>
-                </div >
-            </div>
+                Metro API Key: <input type="text" id="MetroAPIKey"/>   
         </div>
     </div>
 </body>
