--- a/metro-wdc/MetroWDC.html
+++ b/metro-wdc/MetroWDC.html
@@ -23,9 +23,9 @@
 
 <body id = 'mainbody'>
     <div class="container container-table">
-        <div if = 'mainElement' class="row vertical-center-row" style="text-align:right" >
+        <div if = 'mainElement' class="row vertical-center-row" style="float:right" >
             <img  src="https://upload.wikimedia.org/wikipedia/commons/e/e9/WMATA_Metrobus_logo.svg" id = 'mainimg'/> <br />
-                <button type = "button" id = "submitButton" class = "btn btn-success" style = "margin: 10px;">Get WMTA Bus Incidents Data</button> <br />
+                <button type = "button" id = "submitButton" class = "btn btn-success" style = "margin: 10px;">Get WMTA Bus Incidents Data!</button> <br />
                 Metro API Key: <input type="text" id="MetroAPIKey"/>   
         </div>
     </div>
